--- a/recipes/crepes.html
+++ b/recipes/crepes.html
@@ -104,7 +104,7 @@
 
   <p>Ande here he is on Yogacara idealism specifically:</p>
 
-</p>The Thesis Is Self-Undermining
+</p>"The Thesis Is Self-Undermining
 For Kumārila, not only is the Thesis called into question by perceptual and inferential counterevidence, but it also undermines itself in three different ways.
 • No Difference Between Qualificand and Qualifier. First, the conclusion of any
 argument makes sense only insofar as it involves two components. The first
@@ -136,7 +136,7 @@ Finally, if the Thesis is qualified so that it only says that all awarenessevent
 with the conclusion that these awareness-events have an external objective support. But since they aren’t fundamentally different from other
 waking awareness-events, we wouldn’t be able to rule out the possibility that those awareness-events also have an external objective support
 (v. 76).
-Upshot: the Thesis is self-undermining.
+Upshot: the Thesis is self-undermining.""
 -Kumarila Bhatta, verses 35-76
 </p>
 
