--- a/recipes/crepes.html
+++ b/recipes/crepes.html
@@ -207,11 +207,14 @@ Upshot: the Thesis is self-undermining.""
 
     Karunadasa, Y. Buddhist Analysis of Matter, pp. 172</p>
 
+    <p>In conclusion, commonsense reality is the foundation of all that you are and ever will be. Attack it at your own peril. It is the height of hubris to think one could possibly refute one's own mind and senses and still make sense!</p>
+  
     <p>Is my reasoning simplistic? Is it minimalist? Yes, absolutely. This is by design. Richard Feynman said:</p>
 
     <p> "If you cannot explain something in simple terms, you don't understand it."</p>
 
-    <p>Keep that in mind when someone blathers on into extremely complicated language and ideas to prop up idealism, or any other wild philosophy which ostensibly destroys commonsense reality utterly.</p>
+    <p>Keep that in mind when someone blathers on into extremely complicated language and ideas to prop up idealism, or any other wild philosophy which ostensibly destroys commonsense reality utterly. </p>
+    
        <a href="../index.html">home</a> 
        <p>This website is for entertainment purposes only. It was made as a project for a class.</p>
 </body>
