--- a/recipes/crepes.html
+++ b/recipes/crepes.html
@@ -23,7 +23,7 @@
 
     <p>In other words, some things MUST be real, or else you have no position whatsoever. For all intents and purposes, the commonsense world built by your mind and senses, being the bare minimum and what all is built on, must be real, and providing real, reliable data. If they are not, then any information built by, or learned by them must also be invalid.</p>
 
-    <p>While idealists will argue with this, when we really look at it broadly, all idealism falls under a kind of solipsism category (nothinge exists but your own mind) if we follow the logic far enough. For example, the Yogacara in some iterations were not solipsist, since they acknowledged other minds, while denying all objective reality. Yet, follow that thought all the way down, and we see, quite quickly, that if a table doesn't exist outside your own mind, and neither does your own body, nor the body of a person you are talking to, there is no rational reason to believe that the other person's mind exists, either. Thus, deny the commonsense world, and reify the mind, and you fall into solipsism pretty quickly (note: the Pyrrhonists solved this by casting doubt on the mind, too, but they fall into a different trap. See the page on <a href=./simple-spaghetti.html>Extreme Skepticism</a>). Yet, this is the same problem as all idealism: if nothing is real, because all is mind, then the positions "nothing is real but the mind" is also imaginary, and unreal. Further, it has been demonstrated conclusively that solipsism is completely incoherent:</p>
+    <p>While idealists will argue with this, when we really look at it broadly, all idealism falls under a kind of solipsism category (nothinge exists but your own mind) if we follow the logic far enough. For example, the Yogacara in some iterations were not solipsist, since they acknowledged other minds, while denying all objective reality. Yet, follow that thought all the way down, and we see, quite quickly, that if a table doesn't exist outside your own mind, and neither does your own body, nor the body of a person you are talking to, there is no rational reason to believe that the other person's mind exists, either. Thus, deny the commonsense world, and reify the mind, and you fall into solipsism pretty quickly (note: the Pyrrhonists solved this by casting doubt on the mind, too, but they fall into a different trap. See the page on <a href=./simple-spaghetti.html>Extreme Skepticism</a>). Note well, this ends up in the same problem as all idealism: if nothing is real, because all is mind, then the position "nothing is real but the mind" is also imaginary, and unreal. Further, it has been demonstrated conclusively that solipsism is completely incoherent:</p>
 
     <p><p>"The Incoherence of Solipsism</p>
 
@@ -214,7 +214,7 @@ Upshot: the Thesis is self-undermining.""
     <p> "If you cannot explain something in simple terms, you don't understand it."</p>
 
     <p>Keep that in mind when someone blathers on into extremely complicated language and ideas to prop up idealism, or any other wild philosophy which ostensibly destroys commonsense reality utterly. </p>
-    
+
        <a href="../index.html">home</a> 
        <p>This website is for entertainment purposes only. It was made as a project for a class.</p>
 </body>
