--- a/recipes/crepes.html
+++ b/recipes/crepes.html
@@ -151,7 +151,7 @@ Upshot: the Thesis is self-undermining."
 
  
 
-  <p>Regardless, we might take the arguments in a vaccuum, and separate the commonsense defense, and keep the truth in it for our purposes. Certainly, because the other arguments self refute entirely (see Stafford L. Betty's works on Nagarjuna for more on this), leaving only the defense of common sense as valid.</p>
+  <p>Regardless, we might take the Madhyamaka arguments in a vaccuum, and separate the commonsense defense, and keep the truth in it for our purposes. Certainly, because the other arguments self refute entirely (see Stafford L. Betty's works on Nagarjuna for more on this), leaving only the defense of common sense as valid.</p>
 
   <p>A well known modern argument for common sense is G. E. Moore's "A Defense of Common Sense." Here is a selection: </p>
 
@@ -207,6 +207,8 @@ Upshot: the Thesis is self-undermining."
     <p>"If we base ourselves on the Pali Nikayas, then we should be compelled to conclude that Buddhism is realistic. There is no explicit denial anywhere of the external world. Nor is there any positive evidence to show that the world is mind-made or simply a projection of subjective thoughts. That Buddhism recognizes the extra-mental existence of matter and the external world is clearly suggested by the texts. Throughout the discourses it is the language of realism that one encounters. The whole Buddhist practical doctrine and discipline, which has the attainment of Nibbana as its final goal, is based on the recognition of the material world and the conscious living beings living therein.""
 
     Karunadasa, Y. Buddhist Analysis of Matter, pp. 172</p>
+
+    <p>Another notable fact is that while many think of Hinduism as being idealism, this is actually a gross oversimplification. In reality only certain schools teach idealism, while many others are realist. For example, of the six orthodox Hindu schools, Samkya, Yoga, Nyaya, Vaisheshika, Mimamsa, and Vedanta, only one, Vedanta, is idealism, and only certain versions of it. For example, Ramanuja's Vishishtadvaita Vedanta was realist and argued against idealism, as did Madhvacharya's Dvaita Vedanta, while Adi Shankara's Advaita Vedanta is the one known for being idealist. The reason is probably that Advaita philosophy became very popular outside of India, and many falsely believe that it represents Hinduism as a whole.</p>
 
     <p>In conclusion, commonsense reality is the foundation of all that you are and ever will be. Attack it at your own peril. It is the height of hubris to think one could possibly refute one's own mind and senses and still make sense!</p>
   
