--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <i></i> 
 </div>
 <body class="mainColor">
-  
+  <div class="all">
   <div class="titles">
   <h1><div class="Title">Seeing Philosophy</div>
     
@@ -52,7 +52,7 @@
 
      
 <img class="odinImage" src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d3/The_Sacrifice_of_Odin_by_Fr%C3%B8lich_%28vector%29.svg/170px-The_Sacrifice_of_Odin_by_Fr%C3%B8lich_%28vector%29.svg.png" alt="An image of Odin sacrificing himself to himself on a tree.">
-
+</div>
 <script src="script.js"></script>
 
 
