--- a/index.html
+++ b/index.html
@@ -55,6 +55,9 @@
 </div>
 <script src="script.js"></script>
 
+<!--add a section refuting nagarjuna summarizing betty, robinson and hayes for the relativism page. Add a section recommending a philosophy maybe. Add ordinary language philosophy and philosophical quietism info on the common sense page.-->
+
+
 
 </body>
 
