--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 </div>
 <script src="script.js"></script>
 
-<!--add a section refuting nagarjuna summarizing betty, robinson and hayes for the relativism page. Add a section recommending a philosophy maybe. Add ordinary language philosophy and philosophical quietism info on the common sense page.-->
+<!--add a section refuting nagarjuna summarizing betty, robinson and hayes for the relativism page. Add a section recommending a philosophy maybe. Add ordinary language philosophy and philosophical quietism info on the common sense page. Add a section about philosophy being therapeutic and dissolving philosophical problems. About how language just creates problems to keep philosophers working on impossible psuedo problems, rather than trying to help people or even solve solvable problems.-->
 
 
 
