--- a/recipes/crepes.html
+++ b/recipes/crepes.html
@@ -17,7 +17,7 @@
 
     <p>Idealism seems like a lot of fun. Nothing is real! It's all in your mind! Neat! But, any rational person can see some serious flaws, here. First, go ahead and try to change something. Seriously, imagine billions of dollars worth of gold coins into your closet. Now, check your closet. Any coins? Try imagining food into your stomach. Did it work? Didn't think so. And of course we could do infinite experiments like that, and not one would work, except some absurdly small things, like quantum level events. But those require interpretation, and are too small to actually see anyway. If you can't actually directly sense it in the first place, and are relying on many levels of inference, you can't make a broad claim that it disproves all commonsense reality, and this type of thing would self refute anyway, as can be seen demonstrated in the <a href="./commonSense.html">Common Sense</a> page. Further, keep in mind that for every interpretation that claims quantum mechanics proves some idealism type idea, there is an interpretation that completely contradicts this notion, and plants physics right back on solid ground. For an example, see Rodney Brooks "Fields of Color."</p>
 
-    <p>Now, there are many kinds of idealism, but fundamental to all of them is they deny a significant amount of reality to the objective world, or even all of it, and they cast a huge doubt, or entirely refute the senses. None of this works, because if nothing is real, then the poisiton "nothing is real" cannot be real. If your senses and mind are completely unreliable, since they are founded on the commonsense understanding of the world, in which objects exist outside of mind, and that understanding is completely false, then your position falls apart.</p>
+    <p>Now, there are many kinds of idealism, but fundamental to all of them is they deny a significant amount of reality to the objective world, or even all of it, and they cast a huge doubt, or entirely refute the senses. None of this works, because if nothing is real, then the position "nothing is real" cannot be real. If your senses and mind are completely unreliable, since they are founded on the commonsense understanding of the world, in which objects exist outside of mind, and that understanding is completely false, then your position falls apart.</p>
 
     <p>Wittgenstein put it thusly:
       "We can’t doubt anything without exempting certain other things from doubt. Thus the basic position is that even philosophical doubt requires non-doubt (or belief). That is, in order to get the game of doubt underway, certain things must be placed beyond doubt."
@@ -35,7 +35,7 @@
       
       -Stephen P. Thornton</p>
 
-      <p>Des Cartes made the famous statement "I think, therefore I am." This ostensibly props up and reifies the mind, while casting doubt on the senses, and their data. Yet, we have the exact same amount of information to confirm the mind as we do the sense data. We percieve a thought, and if merely percieving a thought affirms the reality of the mind, then percieving an object surely confirms the reality of the object. This is likely why the Buddhists categorized the mind as one of the senses. Thus, a fuller, more accurate thought on the matter should be "I think, therefore the percieved thought of "I" is, and I see, hear, taste, smell, and touch things, therefore those things percieved, also, are." Hence, the Cartesian position, fully, and properly extrapolated, must confirm commonsense reality, and casts no doubt whatsoever.</p>
+      <p>Des Cartes made the famous statement "I think, therefore I am." This ostensibly props up and reifies the mind, while casting doubt on the senses, and their data. Yet, we have the exact same amount of information to confirm the mind as we do the sense data. We perceive a thought, and if merely perceiving a thought affirms the reality of the mind, then perceiving an object surely confirms the reality of the object. This is likely why the Buddhists categorized the mind as one of the senses. Thus, a fuller, more accurate thought on the matter should be "I think, therefore the perceived thought of "I" is, and I see, hear, taste, smell, and touch things, therefore those things perceived, also, are." Hence, the Cartesian position, fully, and properly extrapolated, must confirm commonsense reality, and casts no doubt whatsoever.</p>
 
 <p>Idealism is not a valid position.</p>
 
@@ -58,8 +58,7 @@
   Tsong khapa makes it plain here that conventional phenomena, unlike the snake
   thought to be perceived when one sees a rope, have causes and effects, and are
   actual. Moreover, he argues that the repudiation of the reality of the conventional
-  would undermine the possibility of epistemic authority, undermining even the abil-
-  ity to argue cogently that the conventional does not exist. Such a position would
+  would undermine the possibility of epistemic authority, undermining even the ability to argue cogently that the conventional does not exist. Such a position would
   be self-refuting."
   -Jay Garfield, Taking Conventional Truth Seriously"
 </p>
@@ -104,7 +103,7 @@
   "The idealist talks of some 'apparent truth' or 'provisional truth of practical life', i.e. in his terminology, of samvriti satya. However, since in his own view, there is really no truth in this 'apparent truth', what is the sense of asking us to look at it as some special brand of truth as it were? If there is truth in it, why call it false at all? And, if it is really false, why call it a kind of truth? Truth and falsehood, being mutually exclusive, there cannot be any factor called 'truth' as belonging in common to both--no more than there can by any common factor called 'treeness' belonging to both the tree and the lion, which are mutually exclusive. On the idealist's own assumption, this 'apparent truth' is nothing but a synonym for the 'false'. Why, then, does he use this expression? Because it serves for him a very important purpose. It is the purpose of a verbal hoax. It means falsity, though with such a pedantic air about it as to suggest something apparently different, as it were. This is in fact a well known trick. Thus, to create a pedantic air, one can use the word vaktrasava [literally mouth-wine] instead of the simpler word lala, meaning saliva [vancanartha upanyaso lala-vaktrasavadivat]. But why is this pedantic air? Why, instead of simply talking of falsity, is the verbal hoax of an 'apparent truth' or samvriti? The purpose of conceiving this samvriti is only to conceal the absurdity of the theory of the nothingness of the objective world, so that it can somehow be explained why things are imagined as actually existing when they are not so. Instead of playing such verbal tricks, therefore, one should speak honestly. This means: one should admit that what does not exist, exists not; and what does exist, exists in the full sense. The latter alone is true, and the former false. But the idealist just cannot afford to do this. He is obliged instead to talk of 'two truths', senseless though this be."
   -Wikipedia page on Two Truths Doctrine, Debiprasad Chattopadhyaya (2001). What is Living and What is Dead in Indian Philosophy 5th edition. pp. 370–1.</p>
 
-  <p>Ande here he is on Yogacara idealism specifically:</p>
+  <p>And here he is on Yogacara idealism specifically:</p>
 
 </p>"The Thesis Is Self-Undermining
 For Kumārila, not only is the Thesis called into question by perceptual and inferential counterevidence, but it also undermines itself in three different ways.
@@ -151,7 +150,7 @@ Upshot: the Thesis is self-undermining."
 
  
 
-  <p>Regardless, we might take the Madhyamaka arguments in a vaccuum, and separate the commonsense defense, and keep the truth in it for our purposes. Certainly, because the other arguments self refute entirely (see Stafford L. Betty's works on Nagarjuna for more on this), leaving only the defense of common sense as valid.</p>
+  <p>Regardless, we might take the Madhyamaka arguments in a vacuum, and separate the commonsense defense, and keep the truth in it for our purposes. Certainly, because the other arguments self refute entirely (see Stafford L. Betty's works on Nagarjuna for more on this), leaving only the defense of common sense as valid.</p>
 
   <p>A well known modern argument for common sense is G. E. Moore's "A Defense of Common Sense." Here is a selection: </p>
 
