add quotation marks

--- a/recipes/commonSense.html
+++ b/recipes/commonSense.html
@@ -29,7 +29,7 @@
             <p>As an aside, it is worth mentioning that some critiquing of the mind and senses, of course, is valid. The point isn't that the mind and senses are entirely infallible. The point is that they are for the most part reliable, and even when they don't depict reality exactly as other sensing devices or beings might, it is still built upon reality, and is depicting it with reasonable fidelity. Put differently, we might note that the human eye sees water where there is none, as with the mirage, and thus sometimes the senses mistake falsehood for reality. However, we cannot claim that the human mind and senses see nothing but falsehood, because that would make the statement "the human mind and senses see nothing but falsehood" a falsehood!</p>
 
 
-            <p>You cannot prove something to be erroneous with an erroneous proof.
+            <p>"You cannot prove something to be erroneous with an erroneous proof."
                 -Stafford L. Betty
               </p>
                 
