--- a/recipes/crepes.html
+++ b/recipes/crepes.html
@@ -41,13 +41,13 @@
 
       <p>We could do this ad infinitum:</p>
 
-      <p>The causal principle of scepticism we say is the hope of attaining ataraxia (becoming tranquil). Men of talent, troubled by the anomaly in things and puzzled as to which of them they should rather assent to, came to investigate what in things is true and what false, thinking that by deciding these issues they would attain ataraxia. The chief constitutive principle of scepticism is the claim that to every account an equal account is opposed; for it is from this, we think, that we come to hold no beliefs.
+      <p>"The causal principle of scepticism we say is the hope of attaining ataraxia (becoming tranquil). Men of talent, troubled by the anomaly in things and puzzled as to which of them they should rather assent to, came to investigate what in things is true and what false, thinking that by deciding these issues they would attain ataraxia. The chief constitutive principle of scepticism is the claim that to every account an equal account is opposed; for it is from this, we think, that we come to hold no beliefs".
 
         — Sextus Empiricus, Outlines of Pyrrhonism, Book I, Chapter 12</p>
 
-        <p>If form does not exist, then do not cling to the existence of mind; and if mind exists, then do not cling to the nonexistence of form.
+        <p>"If form does not exist, then do not cling to the existence of mind; and if mind exists, then do not cling to the nonexistence of form.
 
-          When, for some reason, one does not admit the existence of form, then the existence of both is equally unreasonable and one must admit the nonexistence of mind, as well. And when one admits the existence of mind, then it is necessary to admit the existence of form, for both are conventionally real.
+          When, for some reason, one does not admit the existence of form, then the existence of both is equally unreasonable and one must admit the nonexistence of mind, as well. And when one admits the existence of mind, then it is necessary to admit the existence of form, for both are conventionally real."
         -Chandrakirti, The Emptiness of Emptiness, translated by C.W. Huntington</p>
 
         <p>In other words, if you say the mind is real, and we've all been fooled, inexplicably, that the senses and their objects are real, when in reality they are illusions, I can just as easily say the opposite is true, as I demonstrated above, with just as sound reasoning. This is precisely why all of this stuff self refutes: there is no end to the attack, and there is no reason to think one position which destroys all of commonsense reality is safe from the same assault. All positions function only if commonsense reality is intact.</p>
