--- a/recipes/simple-spaghetti.html
+++ b/recipes/simple-spaghetti.html
@@ -20,7 +20,7 @@
 
     <p>This may, however, be a valid position if one doesn't try to explain it. For example, there is a huge difference between shrugging when asked about one's position, indicating one hasn't one, and actually saying, "I believe nothing." It's one thing to not know something, and skirt the language trap of philosophy, and it's another thing to attempt to prove that you believe nothing, as that self refutes. Nonetheless, the Ajnana figured out a way to articulate this in a such a manner as to possibly not self refute, so long as we don't go beyond the use of the response given by the Ajnana on the <a href ="./commonSense.html">Common Sense</a> page. </p>
 
-    <p>Further, wordless skepticism, as in having no position whatsoever, and simply living life without considering what one knows is debatably another valid version of extreme skepticism. Yet, again, it is not articulated, and so does not self refute. One might notice that people like Chuang Tzu, or some of the Zen masters had this position of valid skepticism at times. Sometimes they would answer questions with nonsense, or recommendations to simply live in the moment, state that they don't have an answer, and similar. For example:</p>
+    <p>Further, wordless skepticism, as in having no position whatsoever, and simply living life without considering what one knows is debatably another valid version of extreme skepticism. Yet, again, it is not articulated, and so does not self refute. One might notice that people like Chuang Tzu, or some of the Zen masters had this position of valid skepticism at times. Sometimes they would answer questions with nonsense, or recommendations to simply live in the moment, state that they don't have an answer, and similar. Perhaps this is the proper way to understand things, rather, by not understanding! For example:</p>
 
     <p>"A monk told Joshu, "I have just entered this monastery. I beg you to teach me." Joshu asked, "Have you eaten your rice porridge?" The monk replied, "I have." "Then," said Joshu, "Go and wash your bowl."
         At that moment the monk was enlightened."
@@ -77,6 +77,22 @@ is nothing which is not done.” Now that we have become
 active, if we wish to return to our original state, we will find it very difficult! Who but the great man could change
 this?"
     -Chuang Tzu, translated by Martin Palmer, Chapter 22</p>
+
+    <p>"Do not hanker for fame.
+        Do not make plans.
+        Do not try to do things.
+        Do not try to master knowledge.
+        Hold what is but do not hold it to be
+        anything.
+        Work with all that comes from Heaven, but
+        do not seek to hold it.
+        Just be empty.
+        The perfect man’s heart is like a mirror. It does not search after things.
+        It does not look for things.
+        It does not seek knowledge, just responds.
+        As a result he can handle everything and is
+        not harmed by anything."
+    -ibid, chapter 7</p>
 
     <a href="../index.html">home</a> <p>This website is for entertainment purposes only. It was made as a project for a class.</p>
 
