--- a/recipes/crepes.html
+++ b/recipes/crepes.html
@@ -130,7 +130,7 @@
   
   The members of this school saw no conflict in defending both positions, yet, Kumarila Bhatta, also known for his genius and refutation of Buddhist idealism, who was of the Mimamsa school (a very interesting sect of Hinduism, look it up!) certainly noticed, as can be seen by his words on the matter of the Madhyamaka philosophy:</p>
 
-<p><p>"Mīmāṃsā refutation of Two Truths Doctrine</p>
+<p>"Mīmāṃsā refutation of Two Truths Doctrine</p>
   Chattopadhyaya notes that the eighth-century Mīmāṃsā philosopher Kumārila Bhaṭṭa rejected the Two Truths Doctrine in his Shlokavartika. Bhaṭṭa was highly influential with his defence of the Vedic rituals against medieval Buddhist rejections of these rituals. Some believe that his influence contributed to the decline of Buddhism in India[61] since his lifetime coincides with the period in which Buddhism began to decline. According to Kumarila, the two truths doctrine is an idealist doctrine, which conceals the fact that "the theory of the nothingness of the objective world" is absurd: Kumārila Bhaṭṭa:
   
   "The idealist talks of some 'apparent truth' or 'provisional truth of practical life', i.e. in his terminology, of samvriti satya. However, since in his own view, there is really no truth in this 'apparent truth', what is the sense of asking us to look at it as some special brand of truth as it were? If there is truth in it, why call it false at all? And, if it is really false, why call it a kind of truth? Truth and falsehood, being mutually exclusive, there cannot be any factor called 'truth' as belonging in common to both--no more than there can by any common factor called 'treeness' belonging to both the tree and the lion, which are mutually exclusive. On the idealist's own assumption, this 'apparent truth' is nothing but a synonym for the 'false'. Why, then, does he use this expression? Because it serves for him a very important purpose. It is the purpose of a verbal hoax. It means falsity, though with such a pedantic air about it as to suggest something apparently different, as it were. This is in fact a well known trick. Thus, to create a pedantic air, one can use the word vaktrasava [literally mouth-wine] instead of the simpler word lala, meaning saliva [vancanartha upanyaso lala-vaktrasavadivat]. But why is this pedantic air? Why, instead of simply talking of falsity, is the verbal hoax of an 'apparent truth' or samvriti? The purpose of conceiving this samvriti is only to conceal the absurdity of the theory of the nothingness of the objective world, so that it can somehow be explained why things are imagined as actually existing when they are not so. Instead of playing such verbal tricks, therefore, one should speak honestly. This means: one should admit that what does not exist, exists not; and what does exist, exists in the full sense. The latter alone is true, and the former false. But the idealist just cannot afford to do this. He is obliged instead to talk of 'two truths', senseless though this be."
@@ -216,6 +216,32 @@ Upshot: the Thesis is self-undermining."
     <p>  If I had three or four fellow slaves who thought in the same way as I did, I’d soon make him explode with anger ... or else change his ideas.
       But as things are, men like this are making fun of us, they make use of all the gifts of nature while abolishing them in theory."
       -Discourses: 2:20</p>
+
+      <p>Here is an argument of Aniol Dowgird, articulated by Jacek Jadacki:</p>
+
+      <p>(1) Convictions, in which we recognize the reality of external objects, are
+        not the result of reasoning.
+        (2) These convictions are not random.
+        Hence, he inferred that:
+        (3) In accordance with the laws of the mind, they cannot be mistaken
+        or uncertain.
+        For suppose that is just as idealists preach, i.e. that no notions, caused by
+        our images are corresponded by real objects, so that all our convictions in
+        which we recognize the reality of such objects are wrong. The existence of
+        sensory illusions would support it.
+        But here, idealists make a mistake. First, the ingredients of insights be‑
+        yond the feelings are notions (on this distinction – cf. below), and the latter
+        are subject to the said rights of the human mind. Second, the decision that
+        something is a sensual illusion is possible only on the assumption that some‑
+        thing is not such an illusion, and the experience can decide which case we
+        are dealing with. The assumption that everything the senses notify to us, is
+        an illusion, is therefore untestable.
+        It is also an untestable idealistic thesis that all our convictions in which
+        we recognize the existence of external objects, are wrong. Also, a claim that
+        some of these latter beliefs are wrong is untestable if we wanted to check
+        their legitimacy by means of sensory experience, because the convictions of this kind are not a matter of sensual feel – but the natural principles
+        governing the functioning of the mind."
+      -Jacek Jadacki, Polish Philosophy, pages 174-175</p>
 
   <p>As an interesting aside, while Buddhism is known for its later iterations in the shape of Madhyamaka relativism and Yogacara idealism, the earlier form of Buddhism, Theravada, was overtly realist, as can be seen by the following:</p>
 
