--- a/recipes/crepes.html
+++ b/recipes/crepes.html
@@ -243,6 +243,8 @@ Upshot: the Thesis is self-undermining."
         governing the functioning of the mind."
       -Jacek Jadacki, Polish Philosophy, pages 174-175</p>
 
+      <p>An example of another thing that is untestable, also known as not falsifiable, or "not even wrong": "Everything is an illusion, and in reality the universe is a giant space potato. This potato is impossible to detect, but I know it is the truth. Evidence for it is that you can't know it's not true, because of the fact that our senses are limited, and that some quantum experiments show that reality isn't real. This is because reality is space potato!" And so on. If it's not falsifiable, is untestable, and is therefore "not even wrong" then it's not a valid position, but rather is mere flight of fancy. Such things make fun movies and books, but have no place in rational, serious philosophy.</p>
+
   <p>As an interesting aside, while Buddhism is known for its later iterations in the shape of Madhyamaka relativism and Yogacara idealism, both of which are Mahayana Buddhism created hundreds of years after the historical Buddha had already died, the earlier form of Buddhism, Theravada, which is based on texts that are thought to have been composed while the Buddha still lived, was overtly realist, as are the texts themselves, as can be seen by the following:</p>
 
   <p>“If, friends, internally the eye is intact but no external forms come into its range, and there is no corresponding conscious engagement, then there is no manifestation of the corresponding section of consciousness. If internally the eye is intact and external forms come into its range, but there is no corresponding conscious engagement, then there is no manifestation of the corresponding section of consciousness."
@@ -266,7 +268,7 @@ Upshot: the Thesis is self-undermining."
     <p>"If we base ourselves on the Pali Nikayas, then we should be compelled to conclude that Buddhism is realistic. There is no explicit denial anywhere of the external world. Nor is there any positive evidence to show that the world is mind-made or simply a projection of subjective thoughts. That Buddhism recognizes the extra-mental existence of matter and the external world is clearly suggested by the texts. Throughout the discourses it is the language of realism that one encounters. The whole Buddhist practical doctrine and discipline, which has the attainment of Nibbana as its final goal, is based on the recognition of the material world and the conscious living beings living therein.
     -Karunadasa, Y. Buddhist Analysis of Matter, pp. 172</p>"
 
-      <p>"“All form is that which is…
+      <p>"All form is that which is…
 
         void of idea,
         neither feeling, nor perception, nor synthesis,
