--- a/recipes/simple-spaghetti.html
+++ b/recipes/simple-spaghetti.html
@@ -231,9 +231,11 @@ this?"
 
                 <p>And to anyone who thinks I misunderstand Nagarjuna, please read the above. If you understand Nagarjuna, then you misunderstand him. To understand is to take a position, to hold a view, and, per Nagarjuna, to be incorrigible. Nagarjuna has caught you in the Ajnana trap, and see DN 1 for the sutta position on Ajnana. If you think you understand emptiness as the correct view of the dhamma, as taught by Nagarjuna, even that is incorrigible. You cannot use Nagarjuna to win any argument, other than by refutation and then refraining from presenting your own view or position. It is pure Ajnana.
                 
-                That said, there is nothing wrong with Ajnana outside of a Buddhist context! From the perspective of the Pyrrhonists, this method leads one to their own type of freedom from suffering, eudaimonia. So surely Nagarjuna's teaching can lead to great peace. From a strict Mahayana perspective, as well, relying on their sutras, which are not found in the Pali Canon, this teaching is perfectly sound. I am refuting these positions purely from the perspective of secular philosophy, and from the perspective of objectively comparing the traditions.</p>
+                That said, there is nothing wrong with Ajnana so long as it is kept in context, and the parts that do not self refute are extracted. From the perspective of the Pyrrhonists, this method leads one to their own type of freedom from suffering, eudaimonia. So surely Nagarjuna's teaching can lead to peace in the right context, and from the right angle. From a strict religious Mahayana perspective, as well, relying on their sutras, which are not found in the Pali Canon, this teaching is perfectly sound. As Betty points out, Nagarjuna's philosophy as a whole is a form of religious mysticism, like a Zen koan. It is not a valid philosophy. I am refuting these positions purely from the perspective of secular philosophy, and from the perspective of objectively comparing the traditions.</p>
 
-                
+            <p>In summary, Ajnana, Pyrrhonism and Nagarjuna's Madhyamaka are all the same thing, for the most part. All, if taken as they were meant to be, as complete philosophies, self refute. On the other hand, each, if taken as only certain parts that could be used as therapeutic philosophy, work quite well. Madhyamaka uses Buddhist terminology, but it's almost entirely a mere facade on top of Ajnana and Pyrrhonist philosophy. The teachings of the historical Buddha bear almost no resemblance to Madhyamaka, and more often than not firmly contradict it.</p>
+
+
 
 
     <a href="../index.html">home</a> <p>This website is for entertainment purposes only. It was made as a project for a class.</p>
