add text and image

--- a/recipes/commonSense.html
+++ b/recipes/commonSense.html
@@ -61,6 +61,27 @@
     -Seneca
 </p>
 
+<p>Honorable mention need be made for the different versions of hedonism, if nothing else than to clear up a common misconception.Epicurus was a hedonist, and Epicureanism is hedonistic. Most picture a lunatic, drunk, promiscuous person, when they think "hednoist." Something like this:</p>
+
+<img class="hedonism" src="https://static.wikia.nocookie.net/enfuturama/images/5/56/Character_Hedonismbot.png/revision/latest?cb=20221005104549">
+
+<p>On the contrary, though, the word can also denote someone like Epicurus, who, despite being smeared as the above, was, in reality, chaste, moderate in food and drink, avoided violence and politics, and was, by most modern standards, a reserved, reasonable fellow, and so he designed his philosophy, as well. Thus, we see, there is variety in the word. Now, of course, there were others, for example, the Chavarka:</p>
+
+
+
+<p>"There is no world other than this;
+    There is no heaven and no hell;
+    The realm of Shiva and like regions,
+    are fabricated by stupid imposters.
+    
+    ... The enjoyment of heaven lies in eating delicious food, keeping company of young women, using fine clothes, perfumes, garlands, sandal paste... while moksha is death which is cessation of life-breath... the wise therefore ought not to take pains on account of moksha.
+
+    A fool wears himself out by penances and fasts. Chastity and other such ordinances are laid down by clever weaklings."
+    
+    — Sarvasiddhanta Samgraha, Verses 8, 9-12</p>
+
+    <p>And the Cyrenaics. While Epicurus was a direct realist, and even the Charvaka were realist, the Cyrenaics were incredibly skeptical, and believed that pleasure was all. They believed all we can know are our senses, but not what they sense. This, obviously, falls into similar self refutation as discussed elsewhere on this site. Nonetheless, they are interesting because of their position, and the fact that they still saw reason in going by social standards, as such things can bring pleasure, and avoid pain. </p>
+
 
         <a href="../index.html">home</a> <p>This website is for entertainment purposes only. It was made as a project for a class.</p>
 
